fixed textbox poking out on small phone screens

--- a/public/notes.css
+++ b/public/notes.css
@@ -95,8 +95,8 @@ ul {
 }
 
 li {
-    width: 400px;
-    max-width: 500px;
+    width: 90%;
+    max-width: 400px;
     background-color: var(--colorligher);
     display: flex;
     flex-direction: column;
@@ -153,26 +153,28 @@ input[type="text"] {
     max-height:200px ;
     outline: none;
     border-radius: 15px;
+    padding: 10px;
 }
 
 .title {
-    width: 95%;
+    width: 100%;
+    box-sizing: border-box;
     font-size: 18px;
     font-weight: bold;
     color: var(--colordark);
-    margin: 8px;
+    margin: 0px;
 
 }
 
 textarea {
-    width: 95%;
+    width: 100%;
     height: 50px;
     font-family: Arial, sans-serif;
     border: 0px;
     outline: none;
     resize: none;
-    margin: 8px;
-    margin-top: 0px;
+    margin: 0px;
+    margin-top: 8px;
 }
 
 
@@ -191,9 +193,9 @@ textarea {
     background-color: var(--colordark);
     color: var(--colorligher);
     padding: 5px 8px;
-    margin-right: 10px;
+    margin-right: 0px;
     border-radius: 10px;
-    margin-bottom:10px;
+    margin-bottom:0px;
     font-size: 15px;
     font-weight: bold;
     font-family: Arial, sans-serif;
